# syftbox-rag

./: .gitignore  RAG.ipynb  README.md  app1.py  app2.py  cleanup.sh  config.yaml  files.yaml  install.sh  justfile  main.py  pyproject.toml  questions.txt  rag_builder.py  rag_cli.py  rag_service.py  rag_system.py  requirements.txt  script.sh  syft_rpc_client.py  test.py  test.sh
connectors/: __init__.py  base_connector.py  local_connector.py  onedrive_connector.py
docs/: Pope Francis.docx
rag_databases/my_rag_database/: chroma.sqlite3  metadata.json
rag_db/: chroma.sqlite3
