[project]
name = "syft-environment"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "chromadb",
    "langchain-community",
    "syft-core @ git+https://github.com/OpenMined/syft-extras.git#subdirectory=packages/syft-core",
    "syft-event @ git+https://github.com/OpenMined/syft-extras.git#subdirectory=packages/syft-event",
    "syft-rpc @ git+https://github.com/OpenMined/syft-extras.git#subdirectory=packages/syft-rpc",
    "syft-proxy @ git+https://github.com/OpenMined/syft-extras.git#subdirectory=packages/syft-proxy",
    "syft-http-bridge @ git+https://github.com/OpenMined/syft-extras.git#subdirectory=packages/syft-http-bridge"
]
